--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
+.grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+    grid-column-gap: 50px;
+  }
+
+
 .card {
-    padding: 1rem;
-    border: 1px solid black;
-    margin: 1rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 50px;
+  box-shadow: 10px 5px 5px black;
     }
